--- a/.env
+++ b/.env
@@ -35,7 +35,9 @@ DEFAULT_URI=http://localhost
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="mysql://root:root@127.0.0.1:3306/symf6-hands-on?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="mysql://symfony:symfony@127.0.0.1:3306/symf6-hands-on?serverVersion=mariadb-10.11.2&charset=utf8mb4"
-DATABASE_URL="mysql://symfony:symfony@127.0.0.1:3306/symf6-hands-on?serverVersion=mariadb-10.11.2&charset=utf8mb4"
+# DATABASE_URL="mysql://symfony:symfony@127.0.0.1:3306/symf6-hands-on?serverVersion=mariadb-10.11.2&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=mariadb-10.11.2&charset=utf8mb4"
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3307/app?serverVersion=mariadb-10.11.2&charset=utf8mb4"
 
 
 ###< doctrine/doctrine-bundle ###
