--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,32 @@
-version: "3.8"
 services:
   mysql:
-    image: mariadb:10.8.3
-    # Uncomment below when on Mac M1
-    platform: linux/arm64/v8
+    image: mariadb:10.11.2
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: symf6-hands-on
+      MYSQL_USER: symfony
+      MYSQL_PASSWORD: symfony
     ports:
-      - 3306:3306
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
+      - "8080:8080"
+    depends_on:
+      - mysql
+
+  mailer:
+    image: axllent/mailpit
+    restart: always
+    ports:
+      - "8025:8025"
+      - "1025:1025"
+
+volumes:
+  mysql_data:
